--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^3.0.1",
     "@astrojs/tailwind": "^5.0.0",
     "@astrojs/vercel": "^4.0.3",
     "@types/node": "^20.5.9",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
     "@vercel/kv": "^0.2.2",
     "astro": "^3.0.3",
     "astro-icon": "^0.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sharp": "^0.32.5",
     "tailwindcss": "^3.3.3"
   }
