Add clsx package Minor changes to image and logo assets

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vercel/kv": "^0.2.2",
     "astro": "^3.0.3",
     "astro-icon": "^0.8.1",
+    "clsx": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sharp": "^0.32.5",
