--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^20.5.9",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
+    "@vercel/analytics": "^1.0.2",
     "@vercel/kv": "^0.2.2",
     "astro": "^3.0.3",
     "astro-icon": "^0.8.1",
