--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "astro": "^3.0.3",
     "astro-icon": "^0.8.1",
     "clsx": "^2.0.0",
+    "isbot": "^5.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sharp": "^0.32.5",
