--- a/package.json
+++ b/package.json
@@ -13,9 +13,6 @@
     "@astrojs/react": "^4.2.2",
     "@astrojs/tailwind": "^6.0.2",
     "@astrojs/vercel": "^8.1.3",
-    "@types/node": "^20.11.19",
-    "@types/react": "^18.2.57",
-    "@types/react-dom": "^18.2.19",
     "@vercel/analytics": "^1.1.2",
     "@vercel/kv": "^0.2.2",
     "astro": "^5.5.5",
@@ -24,7 +21,11 @@
     "isbot": "^5.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sharp": "^0.33.2",
     "tailwindcss": "^3.4.1"
+  },
+  "devDependencies": {
+    "@types/node": "^20.11.19",
+    "@types/react": "^18.2.57",
+    "@types/react-dom": "^18.2.19"
   }
 }
