--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "isbot": "^5.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sharp": "^0.34.1",
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
