--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/vercel": "^8.1.3",
     "@vercel/analytics": "^1.1.2",
     "@vercel/kv": "^0.2.2",
+    "@vercel/speed-insights": "^1.2.0",
     "astro": "^5.7.4",
     "astro-icon": "^0.8.1",
     "clsx": "^2.1.0",
